// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-2vu076"
  >
     
    <span>
      Default
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Large Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-2vu076 iconOnly large"
  >
    <i
      class="material-icons svelte-2vu076"
    >
      play_arrow
    </i>
     
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Large Text And Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-2vu076 large"
  >
    <i
      class="material-icons svelte-2vu076"
    >
      person
    </i>
     
    <span>
      Hey!
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-2vu076 primary"
  >
     
    <span>
      Primary
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-2vu076 primary iconOnly"
  >
    <i
      class="material-icons svelte-2vu076"
    >
      volume_up
    </i>
     
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary With Badge 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-2vu076 primary"
  >
    <i
      class="material-icons svelte-2vu076"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
     
     
    <div
      class="badge svelte-2vu076 halo"
    >
      5
    </div>
  </button>
</section>
`;

exports[`Storyshots Components/Button Text And Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-2vu076"
  >
    <i
      class="material-icons svelte-2vu076"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button With Badge 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-2vu076"
  >
    <i
      class="material-icons svelte-2vu076"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
     
     
    <div
      class="badge svelte-2vu076 halo"
    >
      23
    </div>
  </button>
</section>
`;

exports[`Storyshots Components/Button With Badge Limit 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-2vu076"
  >
    <i
      class="material-icons svelte-2vu076"
    >
      warning
    </i>
     
    <span>
      Just too much
    </span>
     
     
    <div
      class="badge svelte-2vu076 halo"
    >
      999+
    </div>
  </button>
</section>
`;
